<resources>
    <string name="TWITTER_KEY">Hrt7ACAf3jeoBxawZcDYonNAQ</string>
    <string name="TWITTER_SECRET">aZYZyvjqLORc8i7MuRTDzVRiB1jGVjlyUMylO5VyCvKfaguVGu</string>

    <string name="facebook_app_id">251641805198523</string>
    <integer name="com_vk_sdk_AppId">5503945</integer>


    <string name="app_name">Registration in social networks</string>
    <string name="user_not_validation">Username not valid</string>
    <string name="check_internet">Please check your internet connection state</string>

    <string name="btn_logout_from_google">Logout from Google</string>
    <string name="btn_revoke_access">Revoke Access</string>
    <string name="id_user">Id user</string>
    <string name="name_user">Name user</string>
    <string name="e_mail">E_mail</string>
    <string name="birth_day">Birth day</string>
    <string name="social_network">Social network</string>
    <string name="delete_user">DELETE USER</string>
    <string name="edit">EDIT</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="gallery">GALLERY</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
