<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/tv_dialog_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:hint="@string/name_user"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_centerHorizontal="true"/>

    <EditText
        android:id="@+id/tv_dialog_mail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_dialog_name"
        android:hint="@string/e_mail"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_centerHorizontal="true"/>

    <EditText
        android:id="@+id/tv_dialog_birth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_dialog_mail"
        android:hint="@string/birth_day"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_centerHorizontal="true"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/tv_dialog_birth">

        <Button
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:id="@+id/bt_dialog_ok"
            android:text="@string/ok"
            android:layout_weight="1"
            android:layout_margin="@dimen/activity_horizontal_margin"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:id="@+id/bt_dialog_cancel"
            android:text="@string/cancel"
            android:layout_weight="1"
            android:layout_margin="@dimen/activity_horizontal_margin"/>

    </LinearLayout>

</RelativeLayout>