<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.aleksandrp.registrationinsocialnetworks.profile.ProfileActivity">

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:textColor="@color/color_TEXT"
        android:textSize="34sp"/>

    <ImageView
        android:id="@+id/iv_icon"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/ll_data"
        android:layout_below="@+id/tv_name"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:src="@mipmap/ic_launcher"/>

    <LinearLayout
        android:id="@+id/ll_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/com_facebook_auth_dialog_corner_radius_oversized"
                android:layout_weight="1"
                android:gravity="center_vertical|end"
                android:text="@string/id_user"
                android:textColor="@color/color_user_text"/>


            <TextView
                android:id="@+id/tv_id_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/com_facebook_auth_dialog_corner_radius_oversized"
                android:layout_weight="1"
                android:gravity="center_vertical|start"
                android:textColor="@color/color_user_text"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/com_facebook_auth_dialog_corner_radius_oversized"
                android:layout_weight="1"
                android:gravity="center_vertical|end"
                android:text="@string/e_mail"
                android:textColor="@color/color_user_text"/>


            <TextView
                android:id="@+id/tv_e_mail_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/com_facebook_auth_dialog_corner_radius_oversized"
                android:layout_weight="1"
                android:gravity="center_vertical|start"
                android:textColor="@color/color_user_text"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/com_facebook_auth_dialog_corner_radius_oversized"
                android:layout_weight="1"
                android:gravity="center_vertical|end"
                android:text="@string/birth_day"
                android:textColor="@color/color_user_text"/>


            <TextView
                android:id="@+id/tv_birth_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/com_facebook_auth_dialog_corner_radius_oversized"
                android:layout_weight="1"
                android:gravity="center_vertical|start"
                android:textColor="@color/color_user_text"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/bt_delete"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_weight="1"
                android:text="@string/delete_user"/>

            <Button
                android:id="@+id/bt_edit"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_weight="1"
                android:text="@string/edit"/>

            <Button
                android:id="@+id/bt_gallery"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_weight="1"
                android:text="@string/gallery"/>

        </LinearLayout>
    </LinearLayout>


</RelativeLayout>
